# football-moneyball

./: .gitignore  Dockerfile  LICENSE  README.md  connect.sh  deploy.sh  pyproject.toml
docs/architecture/: overview.md
football_moneyball/: api.py  cli.py  config.py  db.py  export.py  network_analysis.py  player_embeddings.py  player_metrics.py  possession_value.py  pressing.py  rapm.py  viz.py
frontend/: nginx.conf  package-lock.json  package.json
k8s/: app-deployment.yaml  app-service.yaml  configmap-app.yaml  configmap.yaml  cronjob-ingest.yaml  cronjob-odds.yaml  cronjob-predict.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: ingest_sofascore.py
tests/: conftest.py  test_domain_bankroll.py  test_domain_calibration.py  test_domain_cards_predictor.py  test_domain_catboost_predictor.py  test_domain_context_features.py  test_domain_corners_predictor.py  test_domain_elo.py  test_domain_embeddings.py  test_domain_feature_engineering.py  test_domain_h2h_features.py  test_domain_lineup_prediction.py  test_domain_market_features.py  test_domain_metrics.py  test_domain_ml_lambda.py  test_domain_multi_monte_carlo.py  test_domain_pi_rating.py  test_domain_player_lambda.py  test_domain_player_props.py  test_domain_possession_value.py  test_domain_predictor.py  test_domain_pressing.py  test_domain_rapm.py  test_domain_referee.py  test_domain_referee_features.py  test_domain_shots_predictor.py  test_domain_value_detector.py  test_features.py  test_match_predictor_player_aware.py  test_player_embeddings.py  test_player_metrics.py  test_possession_value.py  test_pressing.py  test_rapm.py
(+127 files in other folders)
