[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-moneyball"
version = "0.3.0"
description = "Football analytics CLI — hexagonal architecture with StatsBomb and Sofascore providers"
requires-python = ">=3.12"
dependencies = [
    "statsbombpy>=1.13",
    "requests>=2.31",
    "betfairlightweight>=2.20",
    "pandas>=2.2",
    "numpy>=1.26",
    "networkx>=3.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "mplsoccer>=1.4",
    "rich>=13.7",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
moneyball = "football_moneyball.cli:app"

[tool.setuptools.packages.find]
include = ["football_moneyball*"]
